2009-12-01  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Try to fix gtk DRT build.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:

2009-12-01  David Levin  <levin@chromium.org>

        Reviewed by Eric Seidel.

        check-webkit-style does not understand (Prefix)Foo(Custom|Gtk|CG|Mac).cpp including Foo.h
        https://bugs.webkit.org/show_bug.cgi?id=32033

        * Scripts/modules/cpp_style.py: Changed check for a possible primary header to use find
                                        instead of startswith.
        * Scripts/modules/cpp_style_unittest.py: Added a unit test for the new behavior.

2009-12-01  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Qt build almost fixed, DumpRenderTree should compile now as well.

        * DumpRenderTree/qt/LayoutTestControllerQt.h: Update old function signature.

2009-12-01  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Simon Fraser.

        Add SVG animation test framework with 'snapshot' functionality
        https://bugs.webkit.org/show_bug.cgi?id=31897

        Add new 'sampleSVGAnimationForElementAtTime' DRT method,
        used by the new SVG animation testing framework, implemented
        for qt/gtk/win/mac.

        * DumpRenderTree/LayoutTestController.cpp:
        (sampleSVGAnimationForElementAtTimeCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::sampleSVGAnimationForElementAtTime):
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::sampleSVGAnimationForElementAtTime):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::sampleSVGAnimationForElementAtTime):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:
        * DumpRenderTree/win/LayoutTestControllerWin.cpp: